--- a/package.json
+++ b/package.json
@@ -1,15 +1,29 @@
 {
-  "name": "todo_api",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.18.1"
-  }
+    "name": "todo_api",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "start": "nodemon ./src/entry.ts",
+        "dev": "ts-node ./src/entry.ts"
+    },
+    "author": "",
+    "dependencies": {
+        "bcrypt": "^5.0.1",
+        "cors": "2.8.5",
+        "dotenv": "^16.0.1",
+        "express": "4.18.1",
+        "jsonwebtoken": "^8.5.1",
+        "mysql2": "^2.3.3"
+    },
+    "devDependencies": {
+        "@types/bcrypt": "^5.0.0",
+        "@types/cors": "^2.8.12",
+        "@types/express": "^4.17.13",
+        "@types/jsonwebtoken": "^8.5.8",
+        "@types/node": "^17.0.30",
+        "nodemon": "^2.0.16",
+        "ts-node": "^10.7.0",
+        "typescript": "4.6.4"
+    }
 }
